--- a/Ghost Runner/Info.plist
+++ b/Ghost Runner/Info.plist
@@ -73,5 +73,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>Please allow camera access to take your profile picture</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Pleas allow photo library access to choose your profile picture</string>
 </dict>
 </plist>
