--- a/Ghost Runner/Info.plist
+++ b/Ghost Runner/Info.plist
@@ -62,6 +62,7 @@
 	<true/>
 	<key>UIBackgroundModes</key>
 	<array>
+		<string>audio</string>
 		<string>fetch</string>
 		<string>location</string>
 		<string>processing</string>
